--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,8 @@ html {
 /* Main Hero Image  */
 /* ---------------- */
 .full-page-background {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(82, 16, 16, 0.25)), url(../images/rainbow.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(82, 16, 16, 0.25)),
+    url(../images/rainbow.jpg);
   height: 100%;
   background-position: left;
   background-repeat: no-repeat;
@@ -33,32 +34,32 @@ html {
 
 h1 {
   font-size: 2.5rem;
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
 }
 
 h2 {
   font-size: 2rem;
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
 }
 
 h3 {
   font-size: 1.75rem;
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
 }
 
 h4 {
   font-size: 1.5rem;
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
 }
 
 h5 {
   font-size: 1.25rem;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 h6 {
   font-size: 1rem;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 p,
@@ -66,12 +67,12 @@ a,
 figcaption,
 li {
   font-size: 1rem;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
-.hero-text>h1,
-.hero-text>p,
-.hero-text>a {
+.hero-text > h1,
+.hero-text > p,
+.hero-text > a {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
@@ -116,7 +117,7 @@ button {
   z-index: 1000;
 }
 
-.sticky+.content {
+.sticky + .content {
   padding-top: 60px;
 }
 
@@ -134,10 +135,9 @@ li.contact-list {
   margin: 0 20px;
   background-color: grey;
   border-radius: 20px;
-
 }
 
-ul.contact-list>a {
+ul.contact-list > a {
   color: white;
   text-decoration: none;
 }
@@ -147,7 +147,6 @@ ul.contact-list {
   text-align: center;
   margin: 0;
 }
-
 
 /* .aboutme {
   max-width: 900px;
@@ -180,38 +179,37 @@ ul.contact-list {
   margin: auto;
 }
 
-.maintext>h2 {
+.maintext > h2 {
   padding: 1rem;
   padding-top: 60px;
   text-align: center;
   border-bottom: grey solid 4px;
 }
 
-.maintext>h6 {
+.maintext > h6 {
   padding-top: 1rem;
   margin-bottom: 0;
   text-align: center;
 }
 
-.maintext>p {
+.maintext > p,
+ul {
   padding: 1rem 3rem;
   margin: 1rem 3rem;
   border-radius: 30px;
-
 }
 
-.maintext>ul {
+.maintext > ul {
   list-style-type: circle;
   padding: 1rem 3rem;
   margin: 1rem 3rem;
-
 }
 
 .center-override {
   text-align: center;
 }
 
-.maintext>input {
+.maintext > input {
   border: 1px black solid;
   padding: 10px;
   margin: 10px;
@@ -219,11 +217,20 @@ ul.contact-list {
   text-align: center;
 }
 
-button {
+.button1 {
   color: white;
-  background: rgba(255, 0, 0, .5);
+  background: rgba(99, 141, 176, 0.5);
 }
 
+.button2 {
+  color: white;
+  background: rgba(157, 131, 117, 0.5);
+}
+
+.button3 {
+  color: white;
+  background: rgba(113, 44, 41, 0.5);
+}
 
 .container {
   margin: 0 auto;
@@ -232,21 +239,28 @@ button {
 
 header.aboutme-cover {
   text-align: center;
-  background-image: linear-gradient(rgba(126, 195, 212, 0.5), rgba(126, 195, 212, 0.5)), url(../images/src/glacier-bg.jpg);
+  background-image: linear-gradient(
+      rgba(126, 195, 212, 0.5),
+      rgba(126, 195, 212, 0.5)
+    ),
+    url(../images/src/glacier-bg.jpg);
   background-size: cover;
   color: white;
 }
 
 header.projects {
-  background-image: linear-gradient(rgba(126, 212, 152, 0.5), rgba(126, 212, 152, 0.5)), url(../images/src/longdrop.jpg);
+  background-image: linear-gradient(
+      rgba(126, 212, 152, 0.5),
+      rgba(126, 212, 152, 0.5)
+    ),
+    url(../images/src/longdrop.jpg);
   /* background-repeat: no-repeat; */
   /* background-position: top; */
   background-size: cover;
   min-height: 60vh;
-
 }
 
-header.projects>h1 {
+header.projects > h1 {
   text-align: center;
   padding: 1rem;
   margin: 1rem;
@@ -258,13 +272,13 @@ header.projects>h1 {
   text-align: center;
 }
 
-header>img {
+header > img {
   margin-top: 2rem;
   margin-bottom: 1rem;
   border: 1rem solid white;
 }
 
-header>h1 {
+header > h1 {
   margin-top: 1rem;
   margin-bottom: 2rem;
   padding-bottom: 2rem;
@@ -278,11 +292,11 @@ header>h1 {
   text-align: center;
 }
 
-.flex-container>div {
+.flex-container > div {
   padding: 2rem;
 }
 
-.flex-container>img {
+.flex-container > img {
   border-radius: 50%;
 }
 
@@ -339,9 +353,9 @@ header>h1 {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   height: 30px;
-  transition: height .5s;
-  -webkit-transition: height .5s;
-  -moz-transition: height .5s;
+  transition: height 0.5s;
+  -webkit-transition: height 0.5s;
+  -moz-transition: height 0.5s;
   visibility: hidden;
 }
 
@@ -349,21 +363,31 @@ header>h1 {
   visibility: visible;
 }
 
-
 /* Give the image display a background and max width */
 
 .image-display {
   background: grey;
-  background: linear-gradient(bottom, rgba(128, 128, 128, 0.7), rgba(128, 128, 128, 0.2));
-  background: -webkit-linear-gradient(bottom, rgba(128, 128, 128, 0.7), rgba(128, 128, 128, 0.2));
-  background: -moz-linear-gradient(bottom, rgba(128, 128, 128, .7), rgba(128, 128, 128, 0.2));
+  background: linear-gradient(
+    bottom,
+    rgba(128, 128, 128, 0.7),
+    rgba(128, 128, 128, 0.2)
+  );
+  background: -webkit-linear-gradient(
+    bottom,
+    rgba(128, 128, 128, 0.7),
+    rgba(128, 128, 128, 0.2)
+  );
+  background: -moz-linear-gradient(
+    bottom,
+    rgba(128, 128, 128, 0.7),
+    rgba(128, 128, 128, 0.2)
+  );
   border-radius: 10px;
   padding: 10px;
   text-align: center;
   color: rgba(0, 0, 0, 0.5);
   max-width: 1200px;
   margin: 0 auto;
-  ;
 }
 
 /* ---------------- */
@@ -373,10 +397,9 @@ header>h1 {
 li.nav-list {
   display: inline-flex;
   padding: 10px;
-
 }
 
-li.nav-list>a {
+li.nav-list > a {
   color: white;
   text-decoration: none;
 }
@@ -405,20 +428,18 @@ ul.nav-list {
   margin: 0.5rem;
 }
 
-.sidetext>ul {
+.sidetext > ul {
   list-style-type: circle;
   padding: 1rem 0;
-
-
 }
 
-.bottom-button{
+.bottom-button {
   width: 100%;
   margin: 0 auto;
 }
 
 @media screen and (max-width: 800px) {
-  .maintext>p {
+  .maintext > p {
     padding: 1rem 1rem;
     margin: 0rem 0rem;
     border-radius: 30px;
@@ -428,6 +449,50 @@ ul.nav-list {
   }
 }
 
-.highlight{
+.highlight {
   font-weight: 800;
+}
+
+.skills-list {
+  display: flex;
+  justify-content: space-around;
+}
+
+em {
+  font-weight: 1000;
+}
+
+.skills {
+  color: rgba(113, 44, 41);
+  padding-left: 1rem;
+}
+
+.work-exp-table {
+  padding: 0.5rem 1rem;
+  margin: 0.5rem 1rem;
+  border-radius: 30px;
+}
+
+.work-exp-col1 {
+  width: 25%;
+}
+
+.work-exp-col2 {
+  width: 75%;
+}
+.work-exp-title {
+  font-weight: bolder;
+}
+
+.work-exp-date {
+  font-style: italic;
+}
+
+tr {
+  border-bottom: rgba(0, 0, 0, 0.5) 0.5px dashed;
+  border-top: rgba(0, 0, 0, 0.5) 0.5px dashed;
+}
+
+.work-exp-col2 > ul {
+  list-style-type: circle;
 }
