--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body,
 html {
   height: 100%;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 1.5rem;
 }
 
 /* ---------------- */
@@ -22,7 +22,7 @@ html {
 .hero-text {
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 75%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
@@ -81,6 +81,7 @@ li {
 button {
   padding: 1rem;
   border-radius: 10px;
+  margin-top: 25px;
 }
 
 .rounded-profile-image {
@@ -192,8 +193,7 @@ ul.contact-list {
   text-align: center;
 }
 
-.maintext > p,
-ul {
+.maintext > p {
   padding: 1rem 3rem;
   margin: 1rem 3rem;
   border-radius: 30px;
@@ -248,16 +248,27 @@ header.aboutme-cover {
   color: white;
 }
 
+header.projects2-cover {
+  text-align: center;
+  background-image: linear-gradient(
+      rgba(126, 195, 212, 0.5),
+      rgba(126, 195, 212, 0.5)
+    ),
+    url(../images/src/glacier-bg.jpg);
+  background-size: cover;
+  color: white;
+}
+
 header.projects {
   background-image: linear-gradient(
       rgba(126, 212, 152, 0.5),
       rgba(126, 212, 152, 0.5)
     ),
-    url(../images/src/longdrop.jpg);
+    url(../images/longdrop2.jpg);
   /* background-repeat: no-repeat; */
   /* background-position: top; */
   background-size: cover;
-  min-height: 60vh;
+  min-height: 50vh;
 }
 
 header.projects > h1 {
@@ -410,27 +421,15 @@ ul.nav-list {
 }
 
 .essential-image {
-  max-width: 400px;
-  margin: 1rem;
-  border: 1px solid black;
+  max-width: 370px;
+  margin: 1rem 0;
 }
 
 .flex-essential {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  align-items: start;
-}
-
-.sidetext {
-  max-width: 400px;
-  padding: 0.5rem;
-  margin: 0.5rem;
-}
-
-.sidetext > ul {
-  list-style-type: circle;
-  padding: 1rem 0;
+  align-items: center;
 }
 
 .bottom-button {
@@ -445,7 +444,7 @@ ul.nav-list {
     border-radius: 30px;
   }
   .hero-text {
-    top: 75%;
+    top: 50%;
   }
 }
 
@@ -455,11 +454,18 @@ ul.nav-list {
 
 .skills-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
+  padding-top: 60px;
 }
 
 em {
   font-weight: 1000;
+}
+
+.sidetext > ul > li > em {
+  font-weight: 1000;
+  color: rgba(104, 143, 95);
 }
 
 .skills {
@@ -495,4 +501,107 @@ tr {
 
 .work-exp-col2 > ul {
   list-style-type: circle;
+}
+
+.sidetext {
+  max-width: 400px;
+  padding: 0.5rem;
+  margin: 0.5rem;
+}
+
+.sidetext > ul {
+  list-style-type: circle;
+  padding: 1rem 0rem;
+}
+.sidetext > ul > li {
+  margin: 2rem 0;
+  line-height: 1.6rem;
+}
+
+.project-flex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.nav-list.projects {
+  width: 100%;
+  align-self: flex-end;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.nav-list.projects-header {
+  align-self: center;
+}
+
+.projects-header.nav-list {
+  padding-top: 7rem;
+}
+
+#footer {
+  overflow: hidden;
+  background-color: #333;
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
+}
+
+#footer a {
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+.footer-container {
+  background-color: #333;
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  color: #f2f2f2;
+  padding: 25px;
+}
+
+.footer-container a {
+  color: #f2f2f2;
+  text-align: center;
+  text-decoration: none;
+}
+
+.contact-details {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.contact-details-main {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  padding-top: 25px;
+}
+
+a.highlight {
+  color: rgb(192, 67, 60);
+  border: white solid 1px;
+  border-radius: 10px;
+  font-weight: bolder;
+  text-transform: uppercase;
+  margin: 10px;
+}
+
+.italics {
+  font-style: italic;
+}
+
+.contact-details-hero {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 25px;
+  padding: 25px 0px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.2);
 }
