--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ html {
 /* ---------------- */
 .full-page-background {
   background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(82, 16, 16, 0.25)),
-    url(../images/rainbow.jpg);
+    url(../images/rainbow2.jpg);
   height: 100%;
   background-position: left;
   background-repeat: no-repeat;
@@ -437,17 +437,6 @@ ul.nav-list {
   margin: 0 auto;
 }
 
-@media screen and (max-width: 800px) {
-  .maintext > p {
-    padding: 1rem 1rem;
-    margin: 0rem 0rem;
-    border-radius: 30px;
-  }
-  .hero-text {
-    top: 50%;
-  }
-}
-
 .highlight {
   font-weight: 800;
 }
@@ -496,7 +485,6 @@ em {
 
 tr {
   border-bottom: rgba(0, 0, 0, 0.5) 0.5px dashed;
-  border-top: rgba(0, 0, 0, 0.5) 0.5px dashed;
 }
 
 .work-exp-col2 > ul {
@@ -540,26 +528,11 @@ tr {
   padding-top: 7rem;
 }
 
-#footer {
-  overflow: hidden;
-  background-color: #333;
-  text-align: center;
-  display: flex;
-  justify-content: space-around;
-}
-
-#footer a {
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px;
-  text-decoration: none;
-}
-
 .footer-container {
-  background-color: #333;
+  background-color: rgb(114, 114, 114);
   text-align: center;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   color: #f2f2f2;
   padding: 25px;
 }
@@ -573,7 +546,7 @@ tr {
 .contact-details {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .contact-details-main {
@@ -604,4 +577,38 @@ a.highlight {
   padding: 25px 0px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.2);
+}
+
+@media screen and (max-width: 800px) {
+  .maintext > p {
+    padding: 1rem 1rem;
+    margin: 0rem 0rem;
+    border-radius: 30px;
+  }
+  .hero-text > h1 {
+    margin: 0 0.5rem;
+    padding: 0.5rem;
+  }
+  button,
+  .contact-details-hero {
+    margin-top: 0.5rem;
+  }
+  .hero-text {
+    width: 80%;
+    top: 75%;
+  }
+  .skills-list2:nth-child(2) {
+    padding-top: 1rem;
+    font-weight: bolder;
+  }
+  .skills-list2 {
+    width: 100%;
+    padding-left: 2rem;
+  }
+  .sidetext > ul {
+    padding: 0 2rem;
+  }
+  .hide-mobile {
+    display: none;
+  }
 }
